CustomerFee add customer whit out fee view and excel export